--- a/static/styles.css
+++ b/static/styles.css
@@ -102,6 +102,7 @@ form {
   display: inline;
 }
 
+/* TODO: Convert ID selectors to class selectors */
 #project-list {
   margin-right: 10px;
 }
@@ -112,62 +113,43 @@ form {
 
 .panel-container {
   display: flex;
-  flex-direction: row;
-  width: 100%;
   height: 100%;
-
-  /* display: flex;
-  width: 100%;
-  max-width: 100vw;
-  height: 100vh; */
-
-  /* height: 100%;
   width: 100vw;
   background: #333;
   border: 6px solid #666;
-  display: flex; */
-}
-
-.gutter {
-  background-color: #eee;
-  background-repeat: no-repeat;
-  background-position: 50%;
-}
-
-.gutter.gutter-horizontal {
-  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAeCAYAAADkftS9AAAAIklEQVQoU2M4c+bMfxAGAgYYmwGrIIiDjrELjpo5aiZeMwF+yNnOs5KSvgAAAABJRU5ErkJggg==");
-  cursor: col-resize;
-  float: left;
 }
 
 .blockly-panel {
-  /* padding: 1em; */
-  color: #fff;
+  box-sizing: border-box;
+  /* color: #fff;
   min-width: 200px;
   background-color: aquamarine;
   box-sizing: border-box;
   float: left;
   overflow-y: auto;
   overflow-x: hidden;
+  height: 100%; */
   height: 100%;
-}
-
-.blockly {
-  /* flex-basis: 100%; */
-  height: 100%;
-  width: 100%;
-  /* min-width: 600px; */
+  width: 70%;
   /* position: absolute; */
-  /* position: relative; */
   /* right: 0;
   top: 0;
   left: 0;
   bottom: 0; */
-  /* overflow: hidden; */
+}
+
+.blockly {
+  height: 100%;
+  width: 100%;
+  /* position: absolute;
+  right: 0;
+  top: 0;
+  left: 0;
+  bottom: 0; */
 }
 
 .output-panel {
-  padding: 1em;
+  /* padding: 1em;
   color: #fff;
   min-width: 200px;
   position: relative;
@@ -176,19 +158,27 @@ form {
   float: left;
   overflow-y: auto;
   overflow-x: hidden;
-  height: 100%;
+  height: 100%; */
 
-  /* display: flex;
+  display: flex;
   flex-direction: column;
   flex: 0 0 400px;
   overflow: auto;
-  margin: 1rem;
-  position: absolute;
+  /* margin: 1rem; */
+  /* position: absolute; */
+  /* width: 30%;
+  height: 100%; */
+  /* right: 0; */
+  height: 100%;
+  width: 10%;
+  text-orientation: sideways;
+  overflow: auto;
+  border-left: 1px solid #555;
+}
+
+.output-panel[open] {
   width: 30%;
   height: 100%;
-  right: 0;
-  overflow: auto;
-  border-left: 1px solid #555; */
 }
 
 .generated-code {
@@ -204,3 +194,22 @@ form {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 } */
+
+/* Less than 1000px */
+@media screen and (max-width: 999px) {
+  .panel-container {
+    flex-direction: column;
+  }
+
+  .blockly-panel {
+    width: 100%;
+    height: 100%;
+  }
+
+  .output-panel {
+    width: 100%;
+    height: 50%;
+    border-left: none;
+    border-top: 1px solid #555;
+  }
+}
