--- a/static/styles.css
+++ b/static/styles.css
@@ -172,6 +172,60 @@ dialog.menu::backdrop {
   opacity: 0.5;
 }
 
+/* Landing Page CSS */
+.landing__page {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.landing__page__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 1024px;
+  width: 100%;
+}
+
+.landing__page__header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5em;
+}
+
+.landing__page__title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 70px;
+  margin: 0;
+}
+
+.landing__page__logo {
+  width: 55px;
+  height: 50px;
+}
+
+.landing__page__description {
+  text-align: center;
+  width: 50%;
+  font-size: 20px;
+}
+
+.landing__page__image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 0 2em;
+}
+
 /* Less than 1000px */
 @media screen and (max-width: 999px) {
   .panel-container {
@@ -187,5 +241,48 @@ dialog.menu::backdrop {
     width: 100%;
     height: 50%;
     border-left: none;
+  }
+
+  /* Landing Page CSS Mobile*/
+  .landing__page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+  }
+
+  .landing__page__content {
+    display: flex;
+    width: 100%;
+  }
+
+  .landing__page__header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .landing__page__title {
+    display: flex;
+    font-size: 45px;
+  }
+
+  .landing__page__logo {
+    width: 55px;
+    height: 50px;
+  }
+
+  .landing__page__description {
+    text-align: center;
+    width: 80vw;
+    font-size: 16px;
+    margin: 1em;
+  }
+
+  .landing__page__image {
+    width: 100%;
+    padding: 0 2em;
   }
 }
