--- a/static/styles.css
+++ b/static/styles.css
@@ -189,7 +189,6 @@ dialog.menu::backdrop {
 
   .output-panel {
     width: 100%;
-    height: 50%;
     border-left: none;
   }
 }
@@ -204,5 +203,5 @@ pre span {
 }
 
 pre span::before {
-  content: counter(line) "|";
+  content: counter(line) " ";
 }
