--- a/static/styles.css
+++ b/static/styles.css
@@ -175,10 +175,19 @@ dialog.menu::backdrop {
 /* Landing Page CSS */
 .landing__page {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
+  margin: 0;
+}
+
+.landing__page__section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
 }
 
 .landing__page__content {
@@ -249,6 +258,24 @@ dialog.menu::backdrop {
   margin-top: 0.5em;
 }
 
+.landing__page__footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  background-color: gray;
+  padding: 1em 0;
+}
+
+.landing__footer__text1 {
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center; */
+}
+
 /* Less than 1000px */
 @media screen and (max-width: 999px) {
   .panel-container {
@@ -268,58 +295,7 @@ dialog.menu::backdrop {
 
   /* Landing Page CSS Mobile*/
   .landing__page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-  }
-
-  .landing__page__content {
-    display: flex;
-    width: 100%;
-  }
-
-  .landing__page__header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .landing__page__title {
-    display: flex;
-    font-size: 45px;
-  }
-
-  .landing__page__logo {
-    width: 55px;
-    height: 50px;
-  }
-
-  .landing__page__description {
-    text-align: center;
-    width: 80vw;
-    font-size: 16px;
-    margin: 1em;
-  }
-
-  .landing__page__image {
-    width: 100%;
-    padding: 0 2em;
-  }
-
-  .landing__page__signin {
-    padding: 0.3em 1em;
-    margin-top: 0;
-  }
-
-  .landing__page__signin__text {
-    font-size: 18px;
-  }
-
-  .landing__page__openide__text {
-    font-size: 16px;
-    margin: 1em 0;
+    flex-direction: row;
+    overflow-x: scroll;
   }
 }
