Squashed commit of the following:
commit 0da008e847137ba7ebc250293833bbd939ea2645
Author: EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Wed Jan 17 21:44:27 2024 -0800

    add pixelated edges to blockly icon on landing

commit 565f6c0cf59df1972ae1168638e9621534c88653
Author: EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Wed Jan 17 21:42:21 2024 -0800

    move landing page to index position

commit b8221fc952545c1887162c4ecba3255e4867d3f5
Merge: eaa8e3a d99e2b4
Author: EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Wed Jan 17 21:32:23 2024 -0800

    Merge branch 'landing' into blockly

commit eaa8e3af0b144e4d1a27773e94942611e088ff08
Author: EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Wed Jan 17 21:29:11 2024 -0800

    add project page

commit 1df2bce41a005775c68888a14c43fc4abac892d2
Author: EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Wed Jan 17 21:16:28 2024 -0800

    update dialog ui

commit 343c720bf7f1360d9a3965b819991b545e0bae16
Author: EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Wed Jan 17 21:08:27 2024 -0800

    add /github shortlink, update dialog ui

commit a81238427eaaefdfd6be11373919f2c3cd60c122
Author: EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Wed Jan 17 20:44:28 2024 -0800

    Update deno_blockly.ts

commit c55fbff1cf0096b090f82d17d4c1ec4382b90f7d
Author: EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Wed Jan 17 20:42:50 2024 -0800

    move deno blocks api plugin to file-based routing

commit de0e2a06dc2fbb11719711e141fb9789faade992
Author: EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.github.com>
Date:   Wed Jan 17 20:17:39 2024 -0800

    add GET and POST /projects api endpoints

commit 97da2e23e42ba046e7d9fb4266a6525d7538633c
Author: EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.git

--- a/static/styles.css
+++ b/static/styles.css
@@ -138,12 +138,15 @@ form {
 }
 
 .output-panel {
-  width: 30%;
+  width: 40%;
   height: 100%;
+  color: #00cc00;
+  overflow-y: auto;
 }
 
 .generated-code {
-  background-color: #00ff00;
+  padding: 1em;
+  text-wrap: balance;
 }
 
 dialog.menu {
@@ -170,6 +173,14 @@ dialog.menu::backdrop {
     green
   );
   opacity: 0.5;
+}
+
+dialog.menu h2 {
+  padding: 1em 0;
+}
+
+dialog.menu hr {
+  margin: 1em 0;
 }
 
 /* Landing Page CSS */
@@ -299,7 +310,6 @@ dialog.menu::backdrop {
 
   .output-panel {
     width: 100%;
-    height: 50%;
     border-left: none;
   }
 
@@ -308,4 +318,17 @@ dialog.menu::backdrop {
     flex-direction: row;
     overflow-x: scroll;
   }
+}
+
+pre {
+  counter-reset: line var(--line-num, 0);
+  outline: 1px solid #000;
+}
+
+pre span {
+  counter-increment: line;
+}
+
+pre span::before {
+  content: counter(line) " ";
 }
