--- a/static/styles.css
+++ b/static/styles.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Poppins&display=swap");
+
 :root {
   --nav-height: 42px;
 }
@@ -211,14 +213,13 @@ dialog.menu hr {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 0.5em;
   border-radius: 2em;
   background: black;
-  padding: 0.5em 1em;
+  padding: 0.5em 1.5em;
   margin-top: 1em;
   text-decoration: none;
   color: white;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 .landing__page__section {
@@ -250,6 +251,8 @@ dialog.menu hr {
   justify-content: center;
   font-size: 70px;
   margin: 0;
+  font-family: "Inter", sans-serif;
+  font-weight: 900;
 }
 
 .landing__page__logo {
@@ -291,7 +294,6 @@ dialog.menu hr {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 0.5em;
   background: black;
   padding: 0.5em 1.5em;
   border-radius: 2em;
