--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Poppins&display=swap");
+
 :root {
   --nav-height: 42px;
+  --background-color: #fff;
+  --text-color: #000;
+  --footer-background-color: #c2c2c2;
 }
 
 *,
@@ -43,6 +48,7 @@ html {
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
     "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  background-color: var(--background-color);
 }
 
 .deno-blocks-icon {
@@ -97,6 +103,22 @@ h3 {
   font-size: 22px;
   margin: 10px;
   padding: 0;
+}
+
+a {
+  color: #7289da;
+}
+
+a:hover {
+  color: rgb(56, 81, 203);
+}
+
+a:visited {
+  color: #6129a6;
+}
+
+::selection {
+  color: #7289da;
 }
 
 select,
@@ -187,25 +209,38 @@ dialog.menu hr {
 .landing__page {
   display: flex;
   flex-direction: column;
-  align-items: baseline;
+  align-items: end;
   justify-content: space-between;
   height: 100vh;
   margin: 0;
+  background-color: var(--background-color);
 }
 
 .landing__page__buttons {
   display: flex;
-  background: black;
-  padding: 0.5em;
-  border-radius: 3em;
-  /* margin-left: auto;
-  margin-top: auto; */
+  gap: 1em;
 }
 
 .landing__page__sourcecode {
+  background: black;
+  padding: 0.5em;
+  border-radius: 3em;
+  margin-top: 1em;
+  margin-right: 1em;
+}
+
+.landing__page__documentation {
   display: flex;
-  align-items: end;
-  justify-content: end;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border-radius: 2em;
+  background: black;
+  padding: 0.5em 1.5em;
+  margin-top: 1em;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
 }
 
 .landing__page__section {
@@ -213,7 +248,6 @@ dialog.menu hr {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 1em;
 }
 
 .landing__page__content {
@@ -221,8 +255,6 @@ dialog.menu hr {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  max-width: 1024px;
-  width: 100%;
 }
 
 .landing__page__header {
@@ -240,6 +272,9 @@ dialog.menu hr {
   justify-content: center;
   font-size: 70px;
   margin: 0;
+  font-family: "Inter", sans-serif;
+  font-weight: 900;
+  color: var(--text-color);
 }
 
 .landing__page__logo {
@@ -251,6 +286,7 @@ dialog.menu hr {
   text-align: center;
   width: 50%;
   font-size: 20px;
+  color: var(--text-color);
 }
 
 .landing__page__image {
@@ -259,6 +295,7 @@ dialog.menu hr {
   align-items: center;
   width: 100%;
   padding: 0 2em;
+  margin-bottom: 2em;
 }
 
 .landing__page__signin {
@@ -266,17 +303,38 @@ dialog.menu hr {
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 1em;
+  gap: 0.5em;
   background: black;
   padding: 0.5em 1.5em;
   border-radius: 2em;
   margin-top: 2em;
-}
-
-.landing__page__signin__text {
   text-decoration: none;
   color: white;
   font-size: 20px;
+  transition: font-size 0.3s ease;
+}
+
+.landing__page__signin:hover {
+  font-size: 22px;
+}
+
+.landing__page__openide {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background: black;
+  padding: 1em;
+  border-radius: 2em;
+  margin: 1em 0;
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  transition: font-size 0.3s ease;
+}
+
+.landing__page__openide:hover {
+  font-size: 22px;
 }
 
 .landing__page__openide__text {
@@ -289,10 +347,10 @@ dialog.menu hr {
   justify-content: center;
   align-items: center;
   text-align: center;
-  /* margin-bottom: auto; */
   width: 100%;
-  background-color: gray;
+  background-color: var(--footer-background-color);
   padding: 1em 0;
+  color: var(--text-color);
 }
 
 /* Less than 1000px */
@@ -311,10 +369,55 @@ dialog.menu hr {
     border-left: none;
   }
 
-  /* Landing Page CSS Mobile*/
-  .landing__page {
-    flex-direction: row;
-    overflow-x: scroll;
+  /* Landing Page CSS Mobile */
+  .landing__page__section {
+    flex-direction: column;
+  }
+
+  .landing__page__header {
+    flex-direction: column;
+  }
+
+  .landing__page__title {
+    font-size: 45px;
+  }
+
+  .landing__page__logo {
+    margin-bottom: 1em;
+  }
+
+  .landing__page__description {
+    font-size: 16px;
+    width: 70%;
+  }
+
+  .landing__page__signin {
+    margin-top: 0.5em;
+  }
+
+  .landing__page__openide {
+    margin-top: 0.5em;
+  }
+}
+
+pre {
+  counter-reset: line var(--line-num, 0);
+  outline: 1px solid #000;
+}
+
+pre span {
+  counter-increment: line;
+}
+
+pre span::before {
+  content: counter(line) " ";
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: #111;
+    --text-color: #fff;
+    --footer-background-color: #0a0a0a;
   }
 }
 
